--- a/notebooks/Untitled.ipynb
+++ b/notebooks/Untitled.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 1,
    "id": "567f28b2-e3bc-425d-bcd1-0f21dcd28a89",
    "metadata": {},
    "outputs": [],
@@ -20,7 +20,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "e2a99961-4eb3-4c4d-9be5-1d7297f26b0b",
    "metadata": {},
    "outputs": [],
@@ -34,13 +34,356 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 13,
    "id": "ebf6ee38-4658-42cb-a2c4-1f073a6069a3",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv(\"../data/aosb.csv\")"
+    "df = pd.read_csv(\"../data/aosb.csv\")\n",
+    "df1 = pd.read_csv(\"../data/mtosb.csv\")\n",
+    "df2 = pd.read_csv(\"../data/oosb.csv\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "b5928512-8f2e-41ae-8742-c61c88271efc",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df[\"OSB\"] = \"Adana\"\n",
+    "df1[\"OSB\"] = \"Mersin\"\n",
+    "df2[\"OSB\"] = \"Osmaniye\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "68de809d-d03e-47ab-800d-23647e8f1591",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "all_df = pd.concat([df, df1, df2])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "id": "166c3e28-25ca-4805-af45-dfa6fec342fe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_website = all_df[all_df[\"Website\"].isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "id": "70c98833-95e0-4d16-a49c-08d9354c392c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "no_website = no_website[~no_website.Email.isna()]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "id": "85d8bdd2-9a0b-4a73-be83-3baf6957b3aa",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Title</th>\n",
+       "      <th>Url</th>\n",
+       "      <th>Sector</th>\n",
+       "      <th>Tel</th>\n",
+       "      <th>Fax</th>\n",
+       "      <th>Email</th>\n",
+       "      <th>Website</th>\n",
+       "      <th>OSB</th>\n",
+       "      <th>Address</th>\n",
+       "      <th>Production</th>\n",
+       "      <th>Phone</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>14</th>\n",
+       "      <td>TAIBA AMBALAJ MAKİNA İMALATI İHRACAT VE İTHALA...</td>\n",
+       "      <td>https://www.adanaorganize.org.tr/firma/taiba-a...</td>\n",
+       "      <td>Başka Yerde Sınıflandırılmamış Makina ve Ekipm...</td>\n",
+       "      <td>+90 (322)429-2524</td>\n",
+       "      <td>+90 (322)429-2523</td>\n",
+       "      <td>muhasebe@taibapm.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>26</th>\n",
+       "      <td>DKC AV SANAYİ TİCARET LİMİTED ŞİRKETİ</td>\n",
+       "      <td>https://www.adanaorganize.org.tr/firma/dkc-av-...</td>\n",
+       "      <td>Diğer İmalatlar</td>\n",
+       "      <td>+90 (322)881-0444</td>\n",
+       "      <td>+90 (322)881-0445</td>\n",
+       "      <td>muhasebe@dkcav.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31</th>\n",
+       "      <td>MUSTAFA ATASEVER</td>\n",
+       "      <td>https://www.adanaorganize.org.tr/firma/mustafa...</td>\n",
+       "      <td>Diğer İmalatlar</td>\n",
+       "      <td>+90 (322)394-5138</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>mustafaatasever1979@gmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>32</th>\n",
+       "      <td>ONSAR ISI YALITIM İNŞAAT YAPI MALZEMELERİ MÜHE...</td>\n",
+       "      <td>https://www.adanaorganize.org.tr/firma/onsar-i...</td>\n",
+       "      <td>Diğer İmalatlar</td>\n",
+       "      <td>+90 (322)394-3355</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>onsaryalitim@hotmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>50</th>\n",
+       "      <td>FZA MADENCİLİK ENERJİ SAN. VE TİC. A. Ş.</td>\n",
+       "      <td>https://www.adanaorganize.org.tr/firma/fza-mad...</td>\n",
+       "      <td>Diğer Metalik Olmayan Mineral Ürünlerin İmalatı</td>\n",
+       "      <td>(532)133-3093</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ibrahimbilir@diclefza.com.tr</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Adana</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>94</th>\n",
+       "      <td>ALPAY GÜL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>İNŞAAT TESPİT ELEMANLARI</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>alpay@trionmetal.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Osmaniye</td>\n",
+       "      <td>Büyük Tüysüz Mah. Ali İlbeyli Cad.  BüyükTüysü...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0532 584 09 56</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>95</th>\n",
+       "      <td>AHMET TÜRKER</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>MAKİNE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>turker_torna@hotmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Osmaniye</td>\n",
+       "      <td>\"Osmaniye Organize Sanayi Bölgesi  2 Nolu Soka...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0326 755 4195</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>96</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>METAL</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>info@ugurmetaldemir.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Osmaniye</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0328 802 07 29</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>100</th>\n",
+       "      <td>HÜSEYİN YAHŞİ</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>ŞEKERLEME</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>huseyin-yahsi@hotmail.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Osmaniye</td>\n",
+       "      <td>\"Osmaniye Organize Sanayi Bölgesi  Cami Caddes...</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0328 826 85 04-05</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>101</th>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>GÜBRE</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0328 790 15 19</td>\n",
+       "      <td>info@yesilbasak.com</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>Osmaniye</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>0328 790 15 18</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>99 rows × 11 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                                                 Title  \\\n",
+       "14   TAIBA AMBALAJ MAKİNA İMALATI İHRACAT VE İTHALA...   \n",
+       "26               DKC AV SANAYİ TİCARET LİMİTED ŞİRKETİ   \n",
+       "31                                    MUSTAFA ATASEVER   \n",
+       "32   ONSAR ISI YALITIM İNŞAAT YAPI MALZEMELERİ MÜHE...   \n",
+       "50            FZA MADENCİLİK ENERJİ SAN. VE TİC. A. Ş.   \n",
+       "..                                                 ...   \n",
+       "94                                           ALPAY GÜL   \n",
+       "95                                        AHMET TÜRKER   \n",
+       "96                                                 NaN   \n",
+       "100                                      HÜSEYİN YAHŞİ   \n",
+       "101                                                NaN   \n",
+       "\n",
+       "                                                   Url  \\\n",
+       "14   https://www.adanaorganize.org.tr/firma/taiba-a...   \n",
+       "26   https://www.adanaorganize.org.tr/firma/dkc-av-...   \n",
+       "31   https://www.adanaorganize.org.tr/firma/mustafa...   \n",
+       "32   https://www.adanaorganize.org.tr/firma/onsar-i...   \n",
+       "50   https://www.adanaorganize.org.tr/firma/fza-mad...   \n",
+       "..                                                 ...   \n",
+       "94                                                 NaN   \n",
+       "95                                                 NaN   \n",
+       "96                                                 NaN   \n",
+       "100                                                NaN   \n",
+       "101                                                NaN   \n",
+       "\n",
+       "                                                Sector                Tel  \\\n",
+       "14   Başka Yerde Sınıflandırılmamış Makina ve Ekipm...  +90 (322)429-2524   \n",
+       "26                                     Diğer İmalatlar  +90 (322)881-0444   \n",
+       "31                                     Diğer İmalatlar  +90 (322)394-5138   \n",
+       "32                                     Diğer İmalatlar  +90 (322)394-3355   \n",
+       "50     Diğer Metalik Olmayan Mineral Ürünlerin İmalatı      (532)133-3093   \n",
+       "..                                                 ...                ...   \n",
+       "94                            İNŞAAT TESPİT ELEMANLARI                NaN   \n",
+       "95                                              MAKİNE                NaN   \n",
+       "96                                               METAL                NaN   \n",
+       "100                                          ŞEKERLEME                NaN   \n",
+       "101                                              GÜBRE                NaN   \n",
+       "\n",
+       "                   Fax                          Email Website       OSB  \\\n",
+       "14   +90 (322)429-2523           muhasebe@taibapm.com     NaN     Adana   \n",
+       "26   +90 (322)881-0445             muhasebe@dkcav.com     NaN     Adana   \n",
+       "31                 NaN  mustafaatasever1979@gmail.com     NaN     Adana   \n",
+       "32                 NaN       onsaryalitim@hotmail.com     NaN     Adana   \n",
+       "50                 NaN   ibrahimbilir@diclefza.com.tr     NaN     Adana   \n",
+       "..                 ...                            ...     ...       ...   \n",
+       "94                 NaN           alpay@trionmetal.com     NaN  Osmaniye   \n",
+       "95                 NaN       turker_torna@hotmail.com     NaN  Osmaniye   \n",
+       "96                 NaN        info@ugurmetaldemir.com     NaN  Osmaniye   \n",
+       "100                NaN      huseyin-yahsi@hotmail.com     NaN  Osmaniye   \n",
+       "101     0328 790 15 19            info@yesilbasak.com     NaN  Osmaniye   \n",
+       "\n",
+       "                                               Address Production  \\\n",
+       "14                                                 NaN        NaN   \n",
+       "26                                                 NaN        NaN   \n",
+       "31                                                 NaN        NaN   \n",
+       "32                                                 NaN        NaN   \n",
+       "50                                                 NaN        NaN   \n",
+       "..                                                 ...        ...   \n",
+       "94   Büyük Tüysüz Mah. Ali İlbeyli Cad.  BüyükTüysü...        NaN   \n",
+       "95   \"Osmaniye Organize Sanayi Bölgesi  2 Nolu Soka...        NaN   \n",
+       "96                                                 NaN        NaN   \n",
+       "100  \"Osmaniye Organize Sanayi Bölgesi  Cami Caddes...        NaN   \n",
+       "101                                                NaN        NaN   \n",
+       "\n",
+       "                 Phone  \n",
+       "14                 NaN  \n",
+       "26                 NaN  \n",
+       "31                 NaN  \n",
+       "32                 NaN  \n",
+       "50                 NaN  \n",
+       "..                 ...  \n",
+       "94      0532 584 09 56  \n",
+       "95       0326 755 4195  \n",
+       "96      0328 802 07 29  \n",
+       "100  0328 826 85 04-05  \n",
+       "101     0328 790 15 18  \n",
+       "\n",
+       "[99 rows x 11 columns]"
+      ]
+     },
+     "execution_count": 25,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "no_website"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7d98f290-4c42-433e-b4c8-304c6000ee92",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
